NetBSD Problem Report #50643

From www@NetBSD.org  Sun Jan 10 20:56:47 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B0D5D7AC9D
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 10 Jan 2016 20:56:47 +0000 (UTC)
Message-Id: <20160110205646.D90217ACA5@mollari.NetBSD.org>
Date: Sun, 10 Jan 2016 20:56:46 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/hpc/stand/hpcboot/arm/arm_console.cpp:80: sanity check after use
X-Send-Pr-Version: www-1.0

>Number:         50643
>Category:       misc
>Synopsis:       src/sys/arch/hpc/stand/hpcboot/arm/arm_console.cpp:80: sanity check after use
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    misc-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jan 10 21:00:00 +0000 2016
>Closed-Date:    Tue May 31 02:13:06 +0000 2016
>Last-Modified:  Tue May 31 02:13:06 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160110
>Organization:
>Environment:
>Description:
[src/sys/arch/hpc/stand/hpcboot/arm/arm_console.cpp:80]: (style) Array index 'i' is used before limits check.

Source code is

    for (int i = 0; _bufm[i] != '\0' && i < CONSOLE_BUFSIZE; i++) {

Suggest sanity check array index before use.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50643 CVS commit: src/sys/arch/hpc/stand/hpcboot/arm
Date: Mon, 30 May 2016 17:11:57 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Mon May 30 17:11:56 UTC 2016

 Modified Files:
 	src/sys/arch/hpc/stand/hpcboot/arm: arm_console.cpp

 Log Message:
 PR 50643 David Binderman: fix conditional order


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.8 src/sys/arch/hpc/stand/hpcboot/arm/arm_console.cpp

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 31 May 2016 02:13:06 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.