PR 50643 David Binderman: fix conditional order